--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Chris Pachomski",
   "license": "ISC",
   "devDependencies": {
+    "react-hot-loader": "^1.3.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
