--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
+    "react-route": "^1.0.3",
+    "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1"
   }
