--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-route": "^1.0.3",
     "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
-    "redux-logger": "^2.6.1"
+    "redux-logger": "^2.6.1",
+    "soundcloud": "^3.1.2"
   }
 }
