--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "babel-preset-stage-2": "^6.5.0",
     "chai": "^3.5.0",
     "enzyme": "^2.3.0",
+    "exports-loader": "^0.6.3",
+    "imports-loader": "^0.6.5",
     "jsdom": "^9.2.1",
     "mocha": "^2.5.3",
     "react-addons-test-utils": "^15.1.0",
@@ -39,6 +41,8 @@
     "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
-    "soundcloud": "^3.1.2"
+    "redux-thunk": "^2.1.0",
+    "soundcloud": "^3.1.2",
+    "whatwg-fetch": "^1.0.0"
   }
 }
