--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
     "soundcloud": "^3.1.2",
+    "webpack": "^1.13.1",
     "whatwg-fetch": "^1.0.0"
   }
 }
