--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "chai": "^3.5.0",
+    "css-loader": "^0.23.1",
     "enzyme": "^2.3.0",
     "exports-loader": "^0.6.3",
     "imports-loader": "^0.6.5",
     "jsdom": "^9.2.1",
     "mocha": "^2.5.3",
+    "node-sass": "^3.7.0",
     "react-addons-test-utils": "^15.1.0",
     "react-hot-loader": "^1.3.0",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
